<resources>
    <string name="app_name">NightOut</string>


    <string name="title_section1">Plan Details</string>
    <string name="title_section2">Navigation</string>
    <string name="title_section3">Alerts</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="planSearchFieldHint">Where are you going?</string>
    <string name="planFindButtonText">Find</string>
    <string name="reservationCallButtonText">Call to Reserve</string>
    <string name="reservationOnlineButtonText">Reserve Online</string>
    <string name="planSaveButtonText">Save</string>
    <string name="planShareButtonText">Share</string>
    <string name="planDateLabelText">Date:</string>
    <string name="timePickerLabelText">Select a time</string>
    <string name="datePickerTextLabel">Select a date</string>
    <string name="planCheckBoxText">Did you make a reservation?</string>
    <string name="sampleAddress">800 Boylston Street, Boston, MA 02199</string>
    <string name="sampleDestinationName">Top of the Hub</string>
    <string name="sampleDestinationPhonenumber">(903) 401-9672</string>

    <string-array name="temporary_array">
        <item name="plan1">Plan 1</item>
        <item name="plan2">Plan 2</item>
        <item name="plan3">Plan 3</item>
    </string-array>

    <array name="dest_spinner_array">
        <item name="plan_dest_address">Some Restaurant</item>
        <item name="home_address">Home</item>
        <item name="other">Other</item>
    </array>
    <string name="title_activity_settings_activity_two">SettingsActivityTwo</string>
    <string name="title_activity_checkin">CheckinActivity</string>

    <string name="attribution">Powered by Google</string>

    <!--Buttons-->
    <string name="refresh_ETA">Refresh ETA Data</string>
    <string name="get_directions">Get Directions</string>
    <string name="get_Uber">Get an Uber</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="get_started">Get Started</string>
    <string name="add_contact">Add Contact</string>

    <!--Walkthrough Strings-->
    <string name="walkthrough_main">Welcome to NightOut!</string>
    <string name="walkthrough_helper">Let us be your personal concierge - helping you create a plan, share it, determine how to get there, and stay safe while you\'re out. In order to do that, we need to gather some information first!</string>
    <string name="walkthrough_general_main">Please enter your cell phone number and home address.</string>
    <string name="walkthrough_general_helper">Your phone number is needed so you can create a fake call to yourself as an easy exit strategy, if you ever find yourself in an uncomfortable situation. Your address will be used to calculate navigation. Without these, the application will not have full functionality.</string>
    <string name="walkthrough_contacts_main">Please select your default emergency contacts.</string>
    <string name="walkthrough_contacts_helper">Add more default emergency contacts in the Settings, and delete a contact with a long press. You can customize the emergency contacts for each plan. The app enables you to easily notify your emergency contacts if you\'re safe or in danger. The check-in feature will automatically notify your emergency contacts after a certain amount of inactivity.</string>
    <string name="walkthrough_new_plan_main">Please name your first plan!</string>
    <string name="walkthrough_new_plan_helper">The details of your night out, your emergency contacts, and your preferred safety measures will be saved together as a plan. The names of each plan are customized - feel free to pick whatever makes sense to you!</string>

    <!--Direction Fragment Strings-->
    <string name="transit_description">transit icon</string>
    <string name="car_description">car icon</string>
    <string name="walking_description">walking icon</string>
    <string name="check_in">Check In</string>
    <string name="check_in_description_off">The check-in system is currently OFF.\nToggle this on at the beginning of your outing to use this safety feature.</string>
    <string name="check_in_description_on">The check-in system is currently ON. \nUse the button below to check in periodically.</string>

    <string name="check_in_text_1">Check in every: </string>
    <string name="check_in_text_2"> minutes</string>
    <string name="check_in_text_3">Misses before alerting contacts: </string>
    <string name="made_it_there">I\'m There</string>
    <string name="made_it_home">I\'m Home</string>
    <string name="safe">I\'m Safe</string>
    <string name="fake_call">Fake Call</string>
    <string name="come_get_me">Come Get Me</string>
    <string name="panic">PANIC</string>
</resources>
