<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/walkthrough_main"
        android:textSize="36sp"
        android:padding="16dp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:layout_below="@id/welcome"
        android:id="@+id/welcome_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/walkthrough_helper"
        android:padding="36dp"
        android:gravity="center_horizontal"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attribution"
        android:gravity="center_horizontal"
        android:layout_below="@id/welcome_detail"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"/>

</RelativeLayout>