<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/helper_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/walkthrough_new_plan_main"
        android:textSize="20sp"
        android:padding="32dp"/>

    <TextView
        android:layout_below="@id/helper_text"
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/walkthrough_new_plan_helper"
        android:textSize="16sp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"/>

    <Button
        android:id="@+id/finish_button"
        android:text="@string/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"/>

    <EditText
        android:id="@+id/new_name"
        android:layout_margin="32dp"
        android:layout_width="fill_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_above="@id/next_button"
        android:layout_below="@id/description"/>

</RelativeLayout>