<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/helper_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/walkthrough_contacts_main"
        android:textSize="20sp"
        android:padding="32dp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/walkthrough_contacts_helper"
        android:textSize="16sp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_marginBottom="12dp"/>

    <ListView
        android:id="@+id/emergency_contacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"/>

    <Button
        android:id="@+id/add_new_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/pref_add_contacts"/>

    <Button
        android:id="@+id/next_button"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"/>


</LinearLayout>