<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.zadu.nightout.PlanDetailsFragment"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="16dp"
    android:id="@+id/planMainLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:id="@+id/planFindLayout">

                <AutoCompleteTextView
                    android:id="@+id/searchField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/planSearchFieldHint">
                    <requestFocus />
                </AutoCompleteTextView>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="4dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/destinationName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:id="@+id/planAddressText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/destinationCityStateZip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:id="@+id/destinationNumber"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="12dp"
                android:id="@+id/planReservationButtonLayout"
                android:gravity="center_horizontal">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reservationCallButtonText"
                    android:layout_marginRight="4dp"
                    android:id="@+id/reservationCallButton" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/reservationOnlineButtonText"
                    android:id="@+id/reservationOnlineButton"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/planDateTimeLayout"
                android:padding="4dp"
                android:gravity="center_horizontal">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/datePickerTextLabel"
                    android:layout_marginRight="4dp"
                    android:id="@+id/datePickerButton" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timePickerLabelText"
                    android:layout_marginLeft="4dp"
                    android:id="@+id/timePickerButton" />


            </LinearLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planCheckBoxText"
                android:layout_gravity="center_horizontal"
                android:padding="4dp"
                android:id="@+id/checkReservationCheckBox" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:text="@string/planShareButtonText"
                android:id="@+id/planShareButton" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
